x2: Add focus fix parameter switch
Change-Id: Ief1e3711ee50c1dc18a4ed45b4a3eb31b1925728

--- a/rootdir/root/init.device.rc
+++ b/rootdir/root/init.device.rc
@@ -141,3 +141,11 @@ service qfp-daemon /vendor/bin/qfp-daemon
 
 on property:init.svc.bootanim=running
     write /sys/class/leds/wled/brightness 122
+    group system drmrpc diag input
+
+# autofocus fix
+on property:persist.camera.focus_fix=1
+    write /sys/module/msm_actuator/parameters/use_focus_fix 1
+
+on property:persist.camera.focus_fix=0
+    write /sys/module/msm_actuator/parameters/use_focus_fix 0
